fast_lio: M300-only optimization — cleanup unused lidars, improve IMU trust, fix launch TFs

--- a/fast_lio/.gitignore
+++ b/fast_lio/.gitignore
@@ -1,8 +1,14 @@
-build
-Log/*.png
-Log/*.txt
-Log/*.csv
-Log/*.pdf
-.vscode/c_cpp_properties.json
-.vscode/settings.json
-PCD/*.pcd
+build/
+install/
+log/
+
+*.bag
+*.db
+*.pcd
+*.ply
+*.bin
+*.txt
+!CMakeLists.txt
+.vscode/
+.idea/
+
