--- a/fast_lio/package.xml
+++ b/fast_lio/package.xml
@@ -1,25 +1,33 @@
 <?xml version="1.0"?>
 <package format="3">
   <name>fast_lio</name>
-  <version>1.0.0</version>
-  <description>FAST-LIO2 modified for Pacecat M300 LiDAR</description>
+  <version>0.0.0</version>
+
+  <description>
+    This is a modified version of LOAM which is original algorithm
+    is described in the following paper:
+    J. Zhang and S. Singh. LOAM: Lidar Odometry and Mapping in Real-time.
+    Robotics: Science and Systems Conference (RSS). Berkeley, CA, July 2014.
+  </description>
+
   <maintainer email="dev@livoxtech.com">claydergc</maintainer>
+
   <license>BSD</license>
+
+  <author email="zhangji@cmu.edu">Ji Zhang</author>
 
   <buildtool_depend>ament_cmake</buildtool_depend>
   <buildtool_depend>rosidl_default_generators</buildtool_depend>
-
   <depend>geometry_msgs</depend>
   <depend>nav_msgs</depend>
   <depend>rclcpp</depend>
-  <depend>rclcpp_components</depend>
   <depend>std_msgs</depend>
-  <depend>std_srvs</depend>
   <depend>sensor_msgs</depend>
-  <depend>visualization_msgs</depend>
-  <depend>tf2_ros</depend>
+  <depend>common_interfaces</depend>
+  <depend>tf2</depend>
   <depend>pcl_ros</depend>
   <depend>pcl_conversions</depend>
+  <!-- livox_ros_driver2 removed — M300 uses standard PointCloud2 -->
 
   <exec_depend>rosidl_default_runtime</exec_depend>
   <member_of_group>rosidl_interface_packages</member_of_group>
