--- a/groundgrid/param/m300.yaml
+++ b/groundgrid/param/m300.yaml
@@ -1,7 +1,7 @@
 # GroundGrid config for Pacecat LDS-M300-E LiDAR
 # Non-repetitive scanning, 200kHz, ~20K pts/frame @10Hz
 # Based on helipr_avia.yaml (also non-repetitive)
-# Tuned for mountain terrain
+# Tuned for mountain terrain + outdoor grass/vegetation
 groundgrid_node:
   ros__parameters:
     groundgrid/dataset_name: "live"
@@ -11,14 +11,22 @@ groundgrid_node:
     groundgrid/groundpatch_detection_minimum_thres: 0.01
     groundgrid/distance_factor: 0.001
     groundgrid/min_distance_factor: 0.0005
-    groundgrid/min_point_height_thres: 0.4
-    groundgrid/min_point_height_obstacle_thres: 0.15
-    groundgrid/outlier_tolerance: 0.15
-    groundgrid/min_ground_patch_detection_point_count_thres: 0.125
+
+    # === 풀/식생 관련 핵심 수정 ===
+    # groundgrid/min_point_height_thres: 0.4              # [v1] 지면+0.4m 이하 → 지면
+    groundgrid/min_point_height_thres: 0.6                # [v2] 지면+0.6m까지 지면으로 허용 (풀 높이 30~50cm 대응)
+    # groundgrid/min_point_height_obstacle_thres: 0.15    # [v1] 장애물 근처 지면+0.15m 이하 → 지면
+    groundgrid/min_point_height_obstacle_thres: 0.35      # [v2] 풀(~30cm)을 장애물이 아닌 지면으로 허용
+    # groundgrid/outlier_tolerance: 0.15                  # [v1] outlier 판정 허용치
+    groundgrid/outlier_tolerance: 0.3                     # [v2] 풀끝 포인트가 outlier로 잡히지 않도록 완화
+
+    # groundgrid/min_ground_patch_detection_point_count_thres: 0.125  # [v1]
+    groundgrid/min_ground_patch_detection_point_count_thres: 0.08     # [v2] 희소 포인트에서도 지면 패치 감지
     groundgrid/patch_size_change_distance: 15.0
     groundgrid/occupied_cells_decrease_factor: 10.0
     groundgrid/occupied_cells_point_count_factor: 20.0
-    groundgrid/min_outlier_detection_ground_confidence: 0.5
+    # groundgrid/min_outlier_detection_ground_confidence: 0.5   # [v1]
+    groundgrid/min_outlier_detection_ground_confidence: 0.3     # [v2] 풀밭에서 confidence 낮아도 지면 인정
     groundgrid/max_threads: 4
     groundgrid/horizontal_point_ang_dist: 0.0031
     groundgrid/min_dist_squared: 0.25
