path_planner v7: add inflation_radius param, increase astar_cost_weight to 2.5

--- a/path_planner/param/path_planner.yaml
+++ b/path_planner/param/path_planner.yaml
@@ -41,7 +41,8 @@ path_planner_node:
 
     # --- A* configuration ---
     astar_lethal_cost: 90.0     # [v2] cells >= this are impassable
-    astar_cost_weight: 1.0      # [v2] terrain cost penalty
+    # astar_cost_weight: 1.0    # [v2] original — too weak, A* hugged obstacles
+    astar_cost_weight: 2.5      # [v7] terrain cost penalty (↑ = prefer open space)
 
     # --- Robot footprint (rectangular) ---
     # [v3] Replaced robot_radius with actual dimensions
@@ -49,6 +50,13 @@ path_planner_node:
     robot_length: 1.432         # [m] front-to-back (x-axis)
     robot_width: 0.850          # [m] left-to-right (y-axis)
     clearance_margin: 0.1       # [m] extra safety buffer around footprint
+
+    # --- [v7] A* costmap inflation ---
+    # Inflates obstacles by this radius before A* planning, so paths keep distance.
+    # -1 = auto (inscribed radius + clearance = 0.525m → 6 cells)
+    # Increase if robot still clips obstacles on narrow passages
+    # Decrease if robot can't find paths through wide-enough corridors
+    inflation_radius: -1.0      # [m] -1=auto, or set explicitly e.g. 0.6
 
     # --- Control ---
     control_rate: 20.0          # [Hz]
